// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@ast-decorators/utils createPropertyByPrivacy creates property when compiles with hard privacy option 1`] = `
"class Foo {
  #_bar = \\"baz\\";
}"
`;

exports[`@ast-decorators/utils createPropertyByPrivacy creates property when compiles with none privacy option 1`] = `
"class Foo {
  _bar = \\"baz\\";
}"
`;

exports[`@ast-decorators/utils createPropertyByPrivacy creates property when compiles with soft privacy option 1`] = `
"const _bar = Symbol();

class Foo {
  [_bar] = \\"baz\\";
}"
`;
